# bb8_surrealdb2

./: Cargo.toml  LICENSE  LICENSE.md  README.md
src/: errors.rs  lib.rs
src/examples/: contactdb.rs  mod.rs  rest.rs
tests/: test.rs
