[package]
name = "bb8_surrealdb2"
version = "0.3.0"
edition = "2021"
authors = ["Kirk Hutchinson"]
license = "MIT"
readme = "README.md"
description = "Surrealdb support for the async bb8 connection pool"
repository = "https://github.com/gravityismagnetism/bb8_surrealdb2"
keywords = ["pool", "surrealdb", "database"]
categories = ["asynchronous", "concurrency", "database"]

[features]
default = ["kv-memory", "examples"]
kv-memory = ["surrealdb/kv-mem"]
kv-rocksdb = ["surrealdb/kv-rocksdb"]
kv-surreal = ["surrealdb/kv-surrealkv"]
kv-websocket = ["surrealdb/protocol-ws"]
kv-indxdb = ["surrealdb/kv-indxdb"]
kv-tikv = ["surrealdb/kv-tikv"]
kv-fdb = ["surrealdb/kv-fdb-7_3"]
http = ["surrealdb/http", "surrealdb/protocol-http"]
examples = ["kv-memory", "actix-web", "actix-http"]

[dependencies]
actix-http = { version = "3.9.0", optional = true }
actix-web = { version = "4.9.0", optional = true }
async-trait = "0.1"
bb8 = "0.8.5"
once_cell = "1.20.1"
serde = { version = "1.0.210", features = ["derive"] }
surrealdb = { version = "2.0.1", features = ["kv-mem"] }
tokio = { version = "1.40.0", features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
